I started with the roductRepositoryValueervice

--- a/MngrPaycheck.Administrator/App.config
+++ b/MngrPaycheck.Administrator/App.config
@@ -10,12 +10,25 @@
                 <binding name="BasicHttpBinding_IProductRepositoryService" />
                 <binding name="BasicHttpBinding_IProductTypeRepositoryService" />
                 <binding name="BasicHttpBinding_IProductParameterRepositoryService" />
+                <binding name="BasicHttpBinding_IProductParameterValueRepository" />
             </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:37948/ProductRepositoryService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductRepositoryService" contract="ProductServiceRef.IProductRepositoryService" name="BasicHttpBinding_IProductRepositoryService" />
-            <endpoint address="http://localhost:3595/ProductTypeRepositoryService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductTypeRepositoryService" contract="ProductTypeServiceRef.IProductTypeRepositoryService" name="BasicHttpBinding_IProductTypeRepositoryService" />
-            <endpoint address="http://localhost:23010/ProductParameterRepositoryService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductParameterRepositoryService" contract="ProductParametrServiceRef.IProductParameterRepositoryService" name="BasicHttpBinding_IProductParameterRepositoryService" />
+            <endpoint address="http://localhost:37948/ProductRepositoryService.svc"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductRepositoryService"
+                contract="ProductServiceRef.IProductRepositoryService" name="BasicHttpBinding_IProductRepositoryService" />
+            <endpoint address="http://localhost:3595/ProductTypeRepositoryService.svc"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductTypeRepositoryService"
+                contract="ProductTypeServiceRef.IProductTypeRepositoryService"
+                name="BasicHttpBinding_IProductTypeRepositoryService" />
+            <endpoint address="http://localhost:23010/ProductParameterRepositoryService.svc"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductParameterRepositoryService"
+                contract="ProductParametrServiceRef.IProductParameterRepositoryService"
+                name="BasicHttpBinding_IProductParameterRepositoryService" />
+            <endpoint address="http://localhost:25643/ProductParameterValueRepository.svc"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductParameterValueRepository"
+                contract="ProductParameterValueServiceRef.IProductParameterValueRepository"
+                name="BasicHttpBinding_IProductParameterValueRepository" />
         </client>
     </system.serviceModel>
 </configuration>
