--- a/MngrPaycheck.Administrator/MngrPaycheck.Administrator.csproj
+++ b/MngrPaycheck.Administrator/MngrPaycheck.Administrator.csproj
@@ -35,8 +35,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MVVMCommon, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Debug\MVVMCommon.dll</HintPath>
+      <HintPath>..\packages\MVVMCommon.1.0.0\lib\MVVMCommon.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.8.0.1-beta3\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -104,7 +104,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Service References\ProductParameterValueServiceRef\Reference.cs">
+    <Compile Include="Service References\ProductParameterValueServiceReference\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
@@ -194,11 +194,11 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
-    <None Include="Service References\ProductParameterValueServiceRef\ProductParameterValueRepository.wsdl" />
-    <None Include="Service References\ProductParameterValueServiceRef\ProductParameterValueRepository.xsd">
+    <None Include="Service References\ProductParameterValueServiceReference\ProductParameterValueRepositoryService.wsdl" />
+    <None Include="Service References\ProductParameterValueServiceReference\ProductParameterValueRepositoryService.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\ProductParameterValueServiceRef\ProductParameterValueRepository1.xsd">
+    <None Include="Service References\ProductParameterValueServiceReference\ProductParameterValueRepositoryService1.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="Service References\ProductParametrServiceRef\ProductParameterRepositoryService.wsdl" />
@@ -240,7 +240,7 @@
     <Resource Include="Content\Images\System.png" />
   </ItemGroup>
   <ItemGroup>
-    <WCFMetadataStorage Include="Service References\ProductParameterValueServiceRef\" />
+    <WCFMetadataStorage Include="Service References\ProductParameterValueServiceReference\" />
     <WCFMetadataStorage Include="Service References\ProductParametrServiceRef\" />
     <WCFMetadataStorage Include="Service References\ProductServiceRef\" />
     <WCFMetadataStorage Include="Service References\ProductTypeServiceRef\" />
@@ -324,16 +324,16 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Service References\ProductParameterValueServiceRef\ProductParameterValueRepository.disco" />
+    <None Include="Service References\ProductParameterValueServiceReference\ProductParameterValueRepositoryService.disco" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Service References\ProductParameterValueServiceRef\configuration91.svcinfo" />
+    <None Include="Service References\ProductParameterValueServiceReference\configuration91.svcinfo" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Service References\ProductParameterValueServiceRef\configuration.svcinfo" />
+    <None Include="Service References\ProductParameterValueServiceReference\configuration.svcinfo" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Service References\ProductParameterValueServiceRef\Reference.svcmap">
+    <None Include="Service References\ProductParameterValueServiceReference\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
