--- a/MngrPaycheck/MngrPaycheck.User.csproj
+++ b/MngrPaycheck/MngrPaycheck.User.csproj
@@ -49,6 +49,10 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="MVVMCommon, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MVVMCommon.1.0.0\lib\MVVMCommon.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Newtonsoft.Json.8.0.1-beta3\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -87,6 +91,11 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Interpreter\Abstract\IExpression.cs" />
+    <Compile Include="Interpreter\Context.cs" />
+    <Compile Include="Interpreter\Expressions\AddExpression.cs" />
+    <Compile Include="Interpreter\Expressions\NumberExpression.cs" />
+    <Compile Include="Interpreter\Expressions\SubtractExpression.cs" />
     <Compile Include="Service References\ProductServiceReference\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -184,6 +193,30 @@
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Content\Images\cancel.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Content\Images\checked.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Content\Images\addInCheck.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Content\Images\deleteInCheck.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Content\Images\verification.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Content\Images\Reports.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Content\Images\question.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Content\Images\user.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\StyleCop.MSBuild.4.7.49.0\build\StyleCop.MSBuild.Targets" Condition="Exists('..\packages\StyleCop.MSBuild.4.7.49.0\build\StyleCop.MSBuild.Targets')" />
