--- a/MngrPaycheck/packages.config
+++ b/MngrPaycheck/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="MVVMCommon" version="1.0.0" targetFramework="net45" />
   <package id="Nortal.Utilities.AssemblyVersioning.MsBuildTask" version="0.11.0" targetFramework="net45" />
 </packages>
