--- a/MngrPaycheck/App.config
+++ b/MngrPaycheck/App.config
@@ -20,7 +20,9 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:37948/ProductRepositoryService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductRepositoryService" contract="ProductServiceReference.IProductRepositoryService" name="BasicHttpBinding_IProductRepositoryService" />
+      <endpoint address="http://localhost:37948/ProductRepositoryService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductRepositoryService"
+        contract="ProductServiceRef.IProductRepositoryService" name="BasicHttpBinding_IProductRepositoryService" />
     </client>
   </system.serviceModel>
 </configuration>
