--- a/MngrPaycheck/MngrPaycheck.Cashier.csproj
+++ b/MngrPaycheck/MngrPaycheck.Cashier.csproj
@@ -96,13 +96,11 @@
     <Compile Include="Interpreter\Expressions\AddExpression.cs" />
     <Compile Include="Interpreter\Expressions\NumberExpression.cs" />
     <Compile Include="Interpreter\Expressions\SubtractExpression.cs" />
-    <Compile Include="Service References\ProductServiceReference\Reference.cs">
+    <Compile Include="Service References\ProductServiceRef\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
-    <Compile Include="Services Logics\ProductSeviceLogics.cs" />
-    <Compile Include="Services Logics\WrapperProductUser.cs" />
     <Compile Include="ViewModel\MainWindowVM.cs" />
     <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -136,11 +134,11 @@
     </None>
     <AppDesigner Include="Properties\" />
     <None Include="Rules.ruleset" />
-    <None Include="Service References\ProductServiceReference\ProductRepositoryService.wsdl" />
-    <None Include="Service References\ProductServiceReference\ProductRepositoryService.xsd">
+    <None Include="Service References\ProductServiceRef\ProductRepositoryService.wsdl" />
+    <None Include="Service References\ProductServiceRef\ProductRepositoryService.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\ProductServiceReference\ProductRepositoryService1.xsd">
+    <None Include="Service References\ProductServiceRef\ProductRepositoryService1.xsd">
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
@@ -171,28 +169,14 @@
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\MngrPaycheck.CommunicationCommon\MngrPaycheck.Communication.Common.csproj">
+      <Project>{88904B5B-D314-419D-9A37-48616B11E4E9}</Project>
+      <Name>MngrPaycheck.Communication.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MngrPaycheck.Entity\MngrPaycheck.Entity.csproj">
       <Project>{3FEAC9D1-FD99-4B63-9B35-0F04B6BA70D8}</Project>
       <Name>MngrPaycheck.Entity</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadataStorage Include="Service References\ProductServiceReference\" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Service References\ProductServiceReference\ProductRepositoryService.disco" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Service References\ProductServiceReference\configuration91.svcinfo" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Service References\ProductServiceReference\configuration.svcinfo" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Service References\ProductServiceReference\Reference.svcmap">
-      <Generator>WCF Proxy Generator</Generator>
-      <LastGenOutput>Reference.cs</LastGenOutput>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Content\Images\cancel.png" />
@@ -217,6 +201,24 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Content\Images\user.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Service References\ProductServiceRef\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\ProductServiceRef\ProductRepositoryService.disco" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\ProductServiceRef\configuration91.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\ProductServiceRef\configuration.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\ProductServiceRef\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\StyleCop.MSBuild.4.7.49.0\build\StyleCop.MSBuild.Targets" Condition="Exists('..\packages\StyleCop.MSBuild.4.7.49.0\build\StyleCop.MSBuild.Targets')" />
