#20 Added new Project (MngrPaycheck.IoCManager) also added
Replaced work services.  Used IoCManager in Services

--- a/ProductService/ProductService.csproj
+++ b/ProductService/ProductService.csproj
@@ -47,7 +47,16 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Newtonsoft.Json.8.0.1-beta3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ninject.3.2.3-unstable-012\lib\net45-full\Ninject.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Ninject.Web.Mvc">
+      <HintPath>..\packages\Ninject.MVC5.3.2.1.0\lib\net45-full\Ninject.Web.Mvc.dll</HintPath>
+    </Reference>
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Data.Services" />
+    <Reference Include="System.ServiceModel.Activation" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -62,6 +71,7 @@
     <Reference Include="System.ServiceModel.Web" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Web.Mvc, Version=4.0.0.1, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
@@ -84,6 +94,7 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="packages.config" />
     <None Include="Properties\PublishProfiles\WebWcf.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -104,6 +115,10 @@
     <ProjectReference Include="..\MngrPaycheck.Entity\MngrPaycheck.Entity.csproj">
       <Project>{3FEAC9D1-FD99-4B63-9B35-0F04B6BA70D8}</Project>
       <Name>MngrPaycheck.Entity</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MngrPaycheck.IoCManager\MngrPaycheck.IoCManager.csproj">
+      <Project>{5B41D5AF-CEDE-45EF-934F-3AFB92B8812B}</Project>
+      <Name>MngrPaycheck.IoCManager</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
