--- a/ProductTypeService/packages.config
+++ b/ProductTypeService/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="8.0.1-beta3" targetFramework="net45" />
+  <package id="Ninject" version="3.2.3-unstable-012" targetFramework="net45" />
 </packages>
