--- a/MngrPaycheck/MngrPaycheck.Cashier.csproj
+++ b/MngrPaycheck/MngrPaycheck.Cashier.csproj
@@ -179,12 +179,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Content\Images\cancel.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Content\Images\checked.png" />
-  </ItemGroup>
-  <ItemGroup>
     <Resource Include="Content\Images\addInCheck.png" />
   </ItemGroup>
   <ItemGroup>
@@ -219,6 +213,12 @@
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Content\Images\erase.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Content\Images\correct.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\StyleCop.MSBuild.4.7.49.0\build\StyleCop.MSBuild.Targets" Condition="Exists('..\packages\StyleCop.MSBuild.4.7.49.0\build\StyleCop.MSBuild.Targets')" />
