Edited model in project
Added:
- two classes: Buyer, PurchaseProduct,
- repositories for those classes
- those classes to Bindings in IoC
- testing in Program.cs

--- a/MngrPaycheck.Common/MngrPaycheck.Common.csproj
+++ b/MngrPaycheck.Common/MngrPaycheck.Common.csproj
@@ -54,6 +54,7 @@
     <Compile Include="..\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="DAL\Infrastructure\IBuyerRepository.cs" />
     <Compile Include="DAL\Infrastructure\ICashierRepository.cs" />
     <Compile Include="DAL\Infrastructure\IMngPaycheckContext.cs" />
     <Compile Include="DAL\Infrastructure\IPaymentTypeRepository.cs" />
@@ -61,6 +62,7 @@
     <Compile Include="DAL\Infrastructure\IProductParametrValueRepository.cs" />
     <Compile Include="DAL\Infrastructure\IProductRepository.cs" />
     <Compile Include="DAL\Infrastructure\IProductTypeRepository.cs" />
+    <Compile Include="DAL\Infrastructure\IPurchaseProductRepository.cs" />
     <Compile Include="DAL\Infrastructure\IPurchaseRepository.cs" />
     <Compile Include="DAL\Infrastructure\IRepository.cs" />
     <Compile Include="DAL\Infrastructure\ISupermarketRepository.cs" />
