--- a/MngrPaycheck/MngrPaycheck.Cashier.csproj
+++ b/MngrPaycheck/MngrPaycheck.Cashier.csproj
@@ -177,6 +177,10 @@
       <Project>{3FEAC9D1-FD99-4B63-9B35-0F04B6BA70D8}</Project>
       <Name>MngrPaycheck.Entity</Name>
     </ProjectReference>
+    <ProjectReference Include="..\MngrPaycheck.Logics\MngrPaycheck.Logics.csproj">
+      <Project>{91BBDB86-FF70-4F1F-9801-586986232DA0}</Project>
+      <Name>MngrPaycheck.Logics</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Content\Images\addInCheck.png" />
@@ -219,6 +223,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Content\Images\correct.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="View\Pictures\arrow.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\StyleCop.MSBuild.4.7.49.0\build\StyleCop.MSBuild.Targets" Condition="Exists('..\packages\StyleCop.MSBuild.4.7.49.0\build\StyleCop.MSBuild.Targets')" />
