--- a/MngrPaycheck.CommunicationCommon/app.config
+++ b/MngrPaycheck.CommunicationCommon/app.config
@@ -9,6 +9,7 @@
                 <binding name="BasicHttpBinding_IProductParameterRepositoryService" />
                 <binding name="BasicHttpBinding_IProductParameterValueRepositoryService" />
                 <binding name="BasicHttpBinding_IProductTypeRepositoryService1" />
+                <binding name="BasicHttpBinding_IBuyerRepositoryService" />
             </basicHttpBinding>
         </bindings>
         <client>
@@ -34,6 +35,9 @@
                 binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductTypeRepositoryService1"
                 contract="ProductTypeServiceRef.IProductTypeRepositoryService"
                 name="BasicHttpBinding_IProductTypeRepositoryService1" />
+            <endpoint address="http://localhost:12533/BuyerRepositoryService.svc"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IBuyerRepositoryService"
+                contract="BuyerServiceRef.IBuyerRepositoryService" name="BasicHttpBinding_IBuyerRepositoryService" />
         </client>
     </system.serviceModel>
 </configuration>
