--- a/MngrPaycheck/App.config
+++ b/MngrPaycheck/App.config
@@ -17,12 +17,16 @@
     <bindings>
       <basicHttpBinding>
         <binding name="BasicHttpBinding_IProductRepositoryService" />
+        <binding name="BasicHttpBinding_IBuyerRepositoryService" />
       </basicHttpBinding>
     </bindings>
     <client>
       <endpoint address="http://localhost:37948/ProductRepositoryService.svc"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductRepositoryService"
         contract="ProductServiceRef.IProductRepositoryService" name="BasicHttpBinding_IProductRepositoryService" />
+      <endpoint address="http://localhost:12533/BuyerRepositoryService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IBuyerRepositoryService"
+        contract="BuyerServiceRef.IBuyerRepositoryService" name="BasicHttpBinding_IBuyerRepositoryService" />
     </client>
   </system.serviceModel>
 </configuration>
