--- a/MngrPaycheck.CommunicationCommon/app.config
+++ b/MngrPaycheck.CommunicationCommon/app.config
@@ -10,6 +10,8 @@
                 <binding name="BasicHttpBinding_IProductParameterValueRepositoryService" />
                 <binding name="BasicHttpBinding_IProductTypeRepositoryService1" />
                 <binding name="BasicHttpBinding_IBuyerRepositoryService" />
+                <binding name="BasicHttpBinding_IPurchaseRepositoryService" />
+                <binding name="BasicHttpBinding_IPurchaseProductRepositoryService" />
             </basicHttpBinding>
         </bindings>
         <client>
@@ -38,6 +40,13 @@
             <endpoint address="http://localhost:12533/BuyerRepositoryService.svc"
                 binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IBuyerRepositoryService"
                 contract="BuyerServiceRef.IBuyerRepositoryService" name="BasicHttpBinding_IBuyerRepositoryService" />
+            <endpoint address="http://localhost:61367/PurchaseRepositoryService.svc"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IPurchaseRepositoryService"
+                contract="PurchaseServiceRef.IPurchaseRepositoryService" name="BasicHttpBinding_IPurchaseRepositoryService" />
+            <endpoint address="http://localhost:2880/PurchaseProductRepositoryService.svc"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IPurchaseProductRepositoryService"
+                contract="PurchaseProductServiceRef.IPurchaseProductRepositoryService"
+                name="BasicHttpBinding_IPurchaseProductRepositoryService" />
         </client>
     </system.serviceModel>
 </configuration>
