--- a/MngrPaycheck/App.config
+++ b/MngrPaycheck/App.config
@@ -18,6 +18,8 @@
       <basicHttpBinding>
         <binding name="BasicHttpBinding_IProductRepositoryService" />
         <binding name="BasicHttpBinding_IBuyerRepositoryService" />
+        <binding name="BasicHttpBinding_IPurchaseRepositoryService" />
+        <binding name="BasicHttpBinding_IPurchaseProductRepositoryService" />
       </basicHttpBinding>
     </bindings>
     <client>
@@ -27,6 +29,13 @@
       <endpoint address="http://localhost:12533/BuyerRepositoryService.svc"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IBuyerRepositoryService"
         contract="BuyerServiceRef.IBuyerRepositoryService" name="BasicHttpBinding_IBuyerRepositoryService" />
+      <endpoint address="http://localhost:61367/PurchaseRepositoryService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IPurchaseRepositoryService"
+        contract="PurchaseServiceRef.IPurchaseRepositoryService" name="BasicHttpBinding_IPurchaseRepositoryService" />
+      <endpoint address="http://localhost:2880/PurchaseProductRepositoryService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IPurchaseProductRepositoryService"
+        contract="PurchaseProductServiceRef.IPurchaseProductRepositoryService"
+        name="BasicHttpBinding_IPurchaseProductRepositoryService" />
     </client>
   </system.serviceModel>
 </configuration>
