--- a/MngrPaycheck/MngrPaycheck.Cashier.csproj
+++ b/MngrPaycheck/MngrPaycheck.Cashier.csproj
@@ -106,6 +106,16 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <Compile Include="Service References\PurchaseProductServiceRef\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
+    <Compile Include="Service References\PurchaseServiceRef\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="ViewModel\MainWindowVM.cs" />
     <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -151,6 +161,20 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="Service References\ProductServiceRef\ProductRepositoryService1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\PurchaseProductServiceRef\PurchaseProductRepositoryService.wsdl" />
+    <None Include="Service References\PurchaseProductServiceRef\PurchaseProductRepositoryService.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\PurchaseProductServiceRef\PurchaseProductRepositoryService1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\PurchaseServiceRef\PurchaseRepositoryService.wsdl" />
+    <None Include="Service References\PurchaseServiceRef\PurchaseRepositoryService.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\PurchaseServiceRef\PurchaseRepositoryService1.xsd">
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
@@ -215,6 +239,8 @@
   <ItemGroup>
     <WCFMetadataStorage Include="Service References\BuyerServiceRef\" />
     <WCFMetadataStorage Include="Service References\ProductServiceRef\" />
+    <WCFMetadataStorage Include="Service References\PurchaseProductServiceRef\" />
+    <WCFMetadataStorage Include="Service References\PurchaseServiceRef\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Service References\ProductServiceRef\ProductRepositoryService.disco" />
@@ -251,6 +277,36 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Service References\BuyerServiceRef\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\PurchaseServiceRef\PurchaseRepositoryService.disco" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\PurchaseServiceRef\configuration91.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\PurchaseServiceRef\configuration.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\PurchaseServiceRef\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\PurchaseProductServiceRef\PurchaseProductRepositoryService.disco" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\PurchaseProductServiceRef\configuration91.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\PurchaseProductServiceRef\configuration.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\PurchaseProductServiceRef\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
