--- a/MngrPaycheck.Buyer/MngrPaycheck.Buyer.csproj
+++ b/MngrPaycheck.Buyer/MngrPaycheck.Buyer.csproj
@@ -73,14 +73,22 @@
     </Compile>
     <Compile Include="ViewModel\LoginVM.cs" />
     <Compile Include="ViewModel\MainWindowVM.cs" />
+    <Compile Include="ViewModel\Pages\AllFavouritePurchasesVM.cs" />
+    <Compile Include="ViewModel\Pages\AllPurchasesVM.cs" />
     <Compile Include="View\LoginView.xaml.cs">
       <DependentUpon>LoginView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\Pages\AllFavouritePurchases.xaml.cs">
+      <DependentUpon>AllFavouritePurchases.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\Pages\AllPurchases.xaml.cs">
+      <DependentUpon>AllPurchases.xaml</DependentUpon>
     </Compile>
     <Page Include="Content\StyleDictionary.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="MainWindow.xaml">
+    <Page Include="View\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -88,11 +96,19 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
     <Page Include="View\LoginView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\Pages\AllFavouritePurchases.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\Pages\AllPurchases.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -206,6 +222,15 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Content\Images\favourite.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Content\Images\skip.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Content\Images\direction.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Content\Images\forward.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
