--- a/MngrPaycheckServicesHost/App.config
+++ b/MngrPaycheckServicesHost/App.config
@@ -32,6 +32,42 @@
             </baseAddresses>
           </host>
       </service>
+      <service name="ProductParameterValueService.ProductParameterValueRepositoryService" behaviorConfiguration="mexBehaviour">
+          <endpoint address="ProductParameterValueService" binding="basicHttpBinding" contract="ProductParameterValueService.IProductParameterValueRepositoryService"></endpoint>
+          <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"></endpoint>
+          <host>
+            <baseAddresses>
+              <add baseAddress="http://localhost:25643/"/>
+            </baseAddresses>
+          </host>
+      </service>
+      <service name="BuyerService.BuyerRepositoryService" behaviorConfiguration="mexBehaviour">
+          <endpoint address="ProductParameterValueService" binding="basicHttpBinding" contract="BuyerService.IBuyerRepositoryService"></endpoint>
+          <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"></endpoint>
+          <host>
+            <baseAddresses>
+              <add baseAddress="http://localhost:12533/"/>
+            </baseAddresses>
+          </host>
+      </service>
+      <service name="PurchaseProductService.PurchaseProductRepositoryService" behaviorConfiguration="mexBehaviour">
+          <endpoint address="ProductParameterValueService" binding="basicHttpBinding" contract="PurchaseProductService.IPurchaseProductRepositoryService"></endpoint>
+          <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"></endpoint>
+          <host>
+            <baseAddresses>
+              <add baseAddress="http://localhost:2880/"/>
+            </baseAddresses>
+          </host>
+      </service>
+      <service name="PurchaseService.PurchaseRepositoryService" behaviorConfiguration="mexBehaviour">
+          <endpoint address="ProductParameterValueService" binding="basicHttpBinding" contract="PurchaseService.IPurchaseRepositoryService"></endpoint>
+          <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"></endpoint>
+          <host>
+            <baseAddresses>
+              <add baseAddress="http://localhost:61367/"/>
+            </baseAddresses>
+          </host>
+      </service>
       </services>
       <behaviors>
         <serviceBehaviors>
